Enhance website content and styling with alternating layout
- Updated homepage content: improved section titles and descriptions
- Changed 'Highlighted Projects' to 'Featured Projects' with subtitle 'Built by the Community'
- Enhanced 'About CivicTechWR' section with full organization name and improved styling
- Implemented alternating layout pattern across homepage sections for better visual flow
- Added hacknight-8.jpg image to meeting sections across all pages (index, about, projects)
- Updated footer styling: improved button hover effects and consistent color scheme
- Fixed footer text: corrected 'Join us on Slack' link text
- Disabled add-view-all-card.js to remove redundant 'Explore More Projects' section
- Enhanced visual hierarchy and user experience across the site

--- a/footer.html
+++ b/footer.html
@@ -43,7 +43,7 @@
       <ul class="footer-links-list">
         <li><a class="footer-donate-btn" href="https://feedback.ctwr.org/">Got Feedback?</a></li>
         <li><a class="footer-general-btn" href="https://discourse.ctwr.org/">Member Dashboard</a></li>
-        <li><a class="footer-general-btn" href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" target="_blank">Join our Slack</a></li>
+        <li><a class="footer-general-btn" href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" target="_blank">Join us on Slack</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/FAQ">Frequently Asked Questions (FAQ)</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates">Guidelines & Templates</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/policies/Code_of_Conduct">Code of Conduct</a></li>
@@ -150,8 +150,8 @@
 .footer-general-btn {
   display: inline-block;
   background: #fafafa;
-  color: var(--p-color);
-  border: 2px solid var(--p-color);
+  color: var(--secondary-color);
+  border: 2px solid var(--secondary-color);
   font-weight: bold;
   padding: 8px 26px;
   border-radius: 4px;
@@ -162,36 +162,42 @@
 }
 .footer-donate-btn:hover {
   background: #fff;
+  color: var(--p-color);
+  border-color: var(--p-color);
   text-decoration: underline;
 }
 
 .footer-donate-btn a:hover {
   background: #fff;
+  color: var(--p-color);
+  border-color: var(--p-color);
   text-decoration: underline;
 }
 
 .footer-general-btn:hover {
-  color: var(--secondary-color);
-  border-color: var(--secondary-color);
+  color: var(--p-color);
+  border-color: var(--p-color);
   text-decoration: underline;
 }
 
 .footer-general-btn a:hover {
-  color: var(--secondary-color);
-  border-color: var(--secondary-color);
+  color: var(--p-color);
+  border-color: var(--p-color);
   text-decoration: underline;
 }
 
 .footer-sponsor-btn:hover {
   background: #fff;
+  color: var(--p-color);
+  border-color: var(--p-color);
   text-decoration: underline;
-  color: #d6685f;
 }
 
 .footer-sponsor-btn a:hover {
   background: #fff;
+  color: var(--p-color);
+  border-color: var(--p-color);
   text-decoration: underline;
-  color: #d6685f;
 }
 
 .footer-social-icons {
