--- a/footer.html
+++ b/footer.html
@@ -23,6 +23,7 @@
       <li><a href="/projects.html">Featured Projects</a></li>
       <li><a href="/#section_4">Our Partners</a></li>
       <li><a href="/about.html">About Us</a></li>
+      <li><a class="footer-donate-btn" href="https://feedback.ctwr.org/">Got Feedback?</a></li>
     </ul>
   </div>
 
@@ -41,21 +42,23 @@
     <div class="footer-col footer-connect">
       <div class="footer-col-title">Get Involved</div>
       <ul class="footer-links-list">
-        <li><a class="footer-donate-btn" href="https://feedback.ctwr.org/">Got Feedback?</a></li>
-        <li><a class="footer-general-btn" href="https://discourse.ctwr.org/">Member Dashboard</a></li>
-        <li><a class="footer-general-btn" href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" target="_blank">Join us on Slack</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/FAQ">Frequently Asked Questions (FAQ)</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates">Guidelines & Templates</a></li>
+        <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates/Template_Pitching/">How to Pitch for CivicTech WR</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/policies/Code_of_Conduct">Code of Conduct</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/policies/Diversity_and_Inclusion_Policy">Diversity and Inclusion Policy</a></li>
+      </ul>
+      <ul class="footer-links-list">
+        <li><a class="footer-general-btn" href="https://www.meetup.com/civictechwr/"><i class="bi bi-calendar-event" style="margin-right: 8px;"></i>Upcoming Hacknight</a></li>
+        <li><a class="footer-general-btn" href="https://discourse.ctwr.org/">Member Dashboard</a></li>
+        <li><a class="footer-general-btn" href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" target="_blank">Join us on Slack</a></li>
       </ul>
       <div class="footer-social-icons">
         <a href="https://www.linkedin.com/company/civictechwr" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@9.21.0/icons/linkedin.svg" alt="LinkedIn" width="18" style="background:white; border-radius:4px;"></a>
         <a href="https://instagram.com/civictechwr" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/instagram.svg" alt="Instagram" width="18" style="background:white; border-radius:4px;"></a>
         <a href="https://twitter.com/civictechwr" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/x.svg" alt="Twitter" width="18" style="background:white; border-radius:4px;"></a>
         <a href="https://facebook.com/civictechwr" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/facebook.svg" alt="Facebook" width="18" style="background:white; border-radius:4px;"></a>
-        <a href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/slack.svg" alt="Slack" width="18" style="background:white; border-radius:4px;"></a>
-        <a href="https://medium.com/civictechwr" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/medium.svg" alt="Medium" width="18" style="background:white; border-radius:4px;"></a>
+        <a href="https://civictechwr.github.io/blog/" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/medium.svg" alt="Medium" width="18" style="background:white; border-radius:4px;"></a>
         <a href="mailto:civictechwr@gmail.com" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@14.15.0/icons/mailboxdotorg.svg" alt="Email" width="18" style="background:white; border-radius:4px;"></a>
         </div>
     </div>
@@ -106,7 +109,7 @@
 .footer-links-list {
   list-style: none;
   padding: 0;
-  margin: 0 0 10px 0;
+  margin: 0 0 20px 0;
 }
 .footer-links-list li {
   margin-bottom: 7px;
