--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@
       <li><a href="/projects.html">Featured Projects</a></li>
       <li><a href="/#section_4">Our Partners</a></li>
       <li><a href="/about.html">About Us</a></li>
-      <li><a class="footer-donate-btn" href="https://feedback.ctwr.org/">Got Feedback?</a></li>
+      <li><a class="footer-general-btn" href="https://feedback.ctwr.org/">🗳️ Got Feedback?</a></li>
     </ul>
   </div>
 
@@ -49,7 +49,7 @@
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/policies/Diversity_and_Inclusion_Policy">Diversity and Inclusion Policy</a></li>
       </ul>
       <ul class="footer-links-list">
-        <li><a class="footer-general-btn" href="https://www.meetup.com/civictechwr/"><i class="bi bi-calendar-event" style="margin-right: 8px;"></i>Upcoming Hacknight</a></li>
+        <li><a class="footer-donate-btn" href="https://www.meetup.com/civictechwr/">Upcoming Hacknight</a></li>
         <li><a class="footer-general-btn" href="https://discourse.ctwr.org/">Member Dashboard</a></li>
         <li><a class="footer-general-btn" href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" target="_blank">Join us on Slack</a></li>
       </ul>
