--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
     </div>
 
       <div class="footer-col footer-support">
-        <div class="footer-col-title">SUPPORT US</div>
+        <div class="footer-col-title" style="color: var(--secondary-color);">SUPPORT US</div>
         <div class="footer-support-text">We pitch in for pizza and drinks ourselves. If you’d like to chip in, please consider donating.</div>
         <a class="footer-donate-btn" href="https://buy.stripe.com/cN24hE161goQcZa8wx" target="_blank">Donate</a>
         <div><br/></div>
@@ -16,14 +16,17 @@
       </div>
 
 <div class="footer-col footer-links">
-  <div class="footer-col-title">Sitemap</div>
+  <div class="footer-col-title" style="color: var(--secondary-color);">Sitemap</div>
     <ul class="footer-links-list">
       <li><a href="https://civictechwr.org">Homepage</a></li>
       <li><a href="https://civictechwr.github.io/blog/">Blog</a></li>
       <li><a href="/projects.html">Featured Projects</a></li>
+      <li><a href="https://discourse.ctwr.org/">Member Dashboard</a></li>
       <li><a href="/#section_4">Our Partners</a></li>
       <li><a href="/about.html">About Us</a></li>
-      <li><a class="footer-general-btn" href="https://feedback.ctwr.org/">🗳️ Got Feedback?</a></li>
+    </ul>
+    <ul class="footer-links-list">
+      <li><a class="footer-donate-btn" href="https://feedback.ctwr.org/">🗳️ Got Feedback?</a></li>
     </ul>
   </div>
 
@@ -40,7 +43,8 @@
 -->
     
     <div class="footer-col footer-connect">
-      <div class="footer-col-title">Get Involved</div>
+      <div class="footer-col-title" style="color: var(--secondary-color);">Get Involved</div>
+
       <ul class="footer-links-list">
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/FAQ">Frequently Asked Questions (FAQ)</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates">Guidelines & Templates</a></li>
@@ -49,8 +53,7 @@
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/policies/Diversity_and_Inclusion_Policy">Diversity and Inclusion Policy</a></li>
       </ul>
       <ul class="footer-links-list">
-        <li><a class="footer-donate-btn" href="https://www.meetup.com/civictechwr/">Upcoming Hacknight</a></li>
-        <li><a class="footer-general-btn" href="https://discourse.ctwr.org/">Member Dashboard</a></li>
+        <li><a class="footer-general-btn" href="https://www.meetup.com/civictechwr/">Upcoming Hacknight</a></li>
         <li><a class="footer-general-btn" href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" target="_blank">Join us on Slack</a></li>
       </ul>
       <div class="footer-social-icons">
