Fix grammar and branding consistency issues
- Fix missing article 'a' in meta descriptions: 'CivicTechWR is a community group'
- Standardize 'hacknight' to lowercase across all files
- Standardize organization name to 'CivicTech Waterloo Region'
- Improve consistency in naming conventions
- Fix grammar errors in page titles and content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="CivicTechWR is community group that brings together people from different backgrounds to actively solve issues facing our local community of Kitchener-Waterloo using design and technology."
+      content="CivicTechWR is a community group that brings together people from different backgrounds to actively solve issues facing our local community of Kitchener-Waterloo using design and technology."
     />
     <link
       rel="icon"
@@ -267,7 +267,7 @@
                     href="https://www.meetup.com/civictechwr/"
                     class="btn btn-primary"
                     ><i class="bi bi-calendar-event me-2"></i
-                    >Upcoming Hacknights</a
+                    >Upcoming hacknights</a
                   >
                   <a
                     href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw"
@@ -315,7 +315,7 @@
                   CivicTechWR focuses on using technology to improve how we
                   connect with our local communities and governments. It’s about
                   making civic interactions and services more efficient and
-                  effective. Civic Tech Waterloo Region was founded in July
+                  effective. CivicTech Waterloo Region was founded in July
                   2017. We’re a community group that brings together people from
                   diverse sectors and industries to collaboratively solve
                   challenges facing our local community using design and
@@ -373,7 +373,7 @@
             <div class="col-lg-6 col-12 mt-5 mt-lg-0">
               <div class="about-thumb">
                 <h3 class="pt-2 mb-3">
-                  Weekly Hacknights.<br />Every Wednesday.
+                  Weekly hacknights.<br />Every Wednesday.
                 </h3>
 
                 <p>
@@ -390,7 +390,7 @@
                 <a
                   href="https://www.meetup.com/civictechwr/"
                   class="btn btn-primary"
-                  ><i class="bi bi-calendar-event me-2"></i>Upcoming Hacknights</a
+                  ><i class="bi bi-calendar-event me-2"></i>Upcoming hacknights</a
                 >
               </div>
             </div>
