Eliminate CSS duplication and fix documentation links
- Remove duplicate CSS variables from css/critical.css and index.html
- Keep CSS variables only in css/style.css (single source of truth)
- Load css/style.css before critical CSS to ensure variables are available
- Update documentation to use HTTPS links instead of HTTP
- Improve maintainability and reduce bundle size
- Fix potential CSS variable conflicts

--- a/index.html
+++ b/index.html
@@ -50,35 +50,13 @@
       rel="stylesheet"
     />
 
+    <!-- Load main stylesheet for CSS variables -->
+    <link href="css/style.css" rel="stylesheet" />
+
     <!-- Critical CSS inlined for performance -->
     <style>
       /* Critical CSS for above-the-fold content */
-      :root {
-        --white-color: #fff;
-        --primary-color: #FC6C6D;
-        --secondary-color: #2D6F72;
-        --section-bg-color: #f9f9f9;
-        --dark-color: #000;
-        --p-color: #717275;
-        --border-color: #e9eaeb;
-        --featured-border-color: #727aab;
-        --body-font-family: 'DM Sans', sans-serif;
-        --h1-font-size: 62px;
-        --h2-font-size: 48px;
-        --h3-font-size: 36px;
-        --h4-font-size: 32px;
-        --h5-font-size: 24px;
-        --h6-font-size: 22px;
-        --p-font-size: 18px;
-        --menu-font-size: 12px;
-        --copyright-font-size: 14px;
-        --border-radius-large: 100px;
-        --border-radius-medium: 20px;
-        --border-radius-small: 10px;
-        --font-weight-normal: 400;
-        --font-weight-medium: 500;
-        --font-weight-bold: 700;
-      }
+      /* CSS Variables are defined in css/style.css */
       
       body {
         background: var(--white-color);
@@ -205,7 +183,6 @@
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/magnific-popup.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
     <link href="css/abstract-shapes.css" rel="stylesheet" />
   </head>
 
