--- a/index.html
+++ b/index.html
@@ -168,6 +168,30 @@
         transform: translateY(-2px);
       }
       
+      .btn.btn-outline {
+        background: transparent !important;
+        border: 1px solid rgb(255 255 255 / 20%) !important;
+        color: var(--white-color) !important;
+        align-content: center;
+      }
+
+      .btn.btn-outline:hover {
+        background: rgb(255 255 255 / 10%) !important;
+        border-color: rgb(255 255 255 / 30%) !important;
+        transform: translateY(-2px);
+      }
+
+      .btn.custom-link {
+        background-color: var(--primary-color) !important;
+        border: none !important;
+        color: var(--white-color) !important;
+      }
+
+      .btn.custom-link:hover {
+        background-color: var(--secondary-color) !important;
+        color: var(--white-color) !important;
+      }
+      
       @keyframes fadeInUp {
         from { opacity: 0; transform: translateY(20px); }
         to { opacity: 1; transform: translateY(0); }
