Fix footer link colors: restore original black/gray colors
- Remove footer links from general teal link styles
- Keep footer-menu-list links gray (#666) with darker gray hover (#333)
- Make footer button links black (#000) with gray hover (#333)
- Update existing footer CSS with !important to override general link styles
- Remove duplicate CSS selectors to fix linting errors
- Preserve original footer design while fixing Bootstrap blue link issue
- Footer links now display in original black/gray colors as intended

--- a/index.html
+++ b/index.html
@@ -176,6 +176,22 @@
         text-decoration: underline;
       }
 
+
+      /* Footer button links should be black */
+      .footer-general-btn,
+      .footer-donate-btn,
+      .footer-sponsor-btn {
+        color: #000 !important;
+        text-decoration: none;
+      }
+
+      .footer-general-btn:hover,
+      .footer-donate-btn:hover,
+      .footer-sponsor-btn:hover {
+        color: #333 !important;
+        text-decoration: underline;
+      }
+
       /* Original button styles - maintain compatibility */
       .btn-primary {
         background: var(--secondary-color);
