Fix CSS selector mismatch for footer sitemap links
🔧 ROOT CAUSE IDENTIFIED:
- HTML uses class 'footer-links-list' for sitemap links
- CSS only had selector '.footer-menu-list a'
- This caused sitemap links to remain blue (browser default)

✅ FIX APPLIED:
- Added '.footer-links-list a' selector alongside '.footer-menu-list a'
- Both selectors now have gray color (#666) with darker gray hover (#333)
- Updated css/style.css, css/critical.css, and index.html inline styles
- Added !important declarations to override Bootstrap defaults

🎯 RESULT:
- Sitemap links (Homepage, Blog, Featured Projects, etc.) now gray
- Get Involved links (FAQ, Guidelines, etc.) now gray
- Footer button links (Donate, Sponsor Us) remain black
- All footer link colors now match original design intent

🔍 CSS ANALYSIS TOOL:
- Created and used CSS analyzer to identify the selector mismatch
- Confirmed fix is properly applied in built CSS file
- All footer link styles now working correctly

--- a/index.html
+++ b/index.html
@@ -192,6 +192,20 @@
         text-decoration: underline;
       }
 
+      /* Footer sitemap links should be gray */
+      .footer-menu-list a,
+      .footer-links-list a {
+        color: #666 !important;
+        text-decoration: none;
+        font-size: 14px;
+        transition: color 0.2s;
+      }
+
+      .footer-menu-list a:hover,
+      .footer-links-list a:hover {
+        color: #333 !important;
+      }
+
       /* Original button styles - maintain compatibility */
       .btn-primary {
         background: var(--secondary-color);
