Remove unnecessary dynamic footer loading and fix CSS loading order
🔧 ROOT CAUSE IDENTIFIED:
- Footer was being loaded dynamically via JavaScript (fetch('/footer.html'))
- This caused CSS timing issues and made styling unreliable
- Dynamic loading was unnecessary for a static site

✅ SOLUTION APPLIED:
- Replaced dynamic loading with static Jekyll includes: {% include footer.html %}
- Updated index.html, about.html, and projects.html
- Removed inline styles from footer.html (no longer needed)
- Fixed CSS loading order: style.css now loads AFTER Bootstrap

🎯 TECHNICAL IMPROVEMENTS:
- Eliminated JavaScript dependency for footer rendering
- CSS now loads in correct order: Bootstrap → style.css
- Footer renders immediately with page load
- No more timing issues with dynamically inserted content
- Cleaner, more maintainable code

✅ RESULT:
- Footer now loads statically with proper CSS application
- All footer link colors work correctly
- Better performance (no JavaScript fetch required)
- More reliable rendering across all browsers

--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
       rel="stylesheet"
     />
 
-    <!-- Load main stylesheet for CSS variables -->
-    <link href="css/style.css" rel="stylesheet" />
-
     <!-- Critical CSS inlined for performance -->
     <style>
       /* Critical CSS for above-the-fold content */
@@ -283,6 +280,9 @@
     <link href="css/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/magnific-popup.css" rel="stylesheet" />
     <link href="css/abstract-shapes.css" rel="stylesheet" />
+    
+    <!-- Load main stylesheet AFTER Bootstrap to override its styles -->
+    <link href="css/style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -705,16 +705,7 @@
       </div>
     </section>
 
-    <div id="footer-container"></div>
-    <script nonce="{{ site.script_nonce | default: 'ctwr-script' }}">
-      // Load the footer content
-      fetch("/footer.html")
-        .then((response) => response.text())
-        .then((data) => {
-          document.getElementById("footer-container").innerHTML = data;
-        })
-        .catch((error) => console.error("Error loading footer:", error));
-    </script>
+    {% include footer.html %}
 
     <!-- JAVASCRIPT FILES -->
     <script
