perf: Replace Bootstrap Icons with inline SVG sprites
Replace 286KB Bootstrap Icons library with 1.7KB inline SVG sprite.

Performance: -286KB (98.5% reduction), no HTTP requests for fonts

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@ permalink: /
     {% else %}
     <link href="css/bootstrap.css" rel="stylesheet" />
     {% endif %}
-    <link href="css/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/abstract-shapes.css" rel="stylesheet" />
 
     <!-- Load main stylesheet AFTER Bootstrap to override its styles -->
@@ -106,7 +105,7 @@ permalink: /
                 <p class="hero-description">Join our community of tech enthusiasts and designers working together to solve local challenges in the Waterloo region</p>
                 <div class="hero-actions">
                   <a href="https://www.meetup.com/civictechwr/" class="btn btn-primary">
-                    <i class="bi bi-calendar-event me-2"></i>
+                    <svg class="icon me-2" width="16" height="16" aria-hidden="true"><use href="#icon-calendar-event"/></svg>
                     Upcoming hacknights
                   </a>
                   <a href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" class="btn btn-outline btn-light-inverse">Slack</a>
@@ -195,7 +194,7 @@ permalink: /
                   civic tech projects and connect with others who share their passion for making a difference. Join us at our next hacknight!
                 </p>
                 <a href="https://www.meetup.com/civictechwr/" class="btn btn-primary">
-                  <i class="bi bi-calendar-event me-2"></i>
+                  <svg class="icon me-2" width="16" height="16" aria-hidden="true"><use href="#icon-calendar-event"/></svg>
                   Upcoming hacknights
                 </a>
               </div>
@@ -282,7 +281,7 @@ permalink: /
                   <div class="meeting-details">
                     <div class="meeting-detail-item">
                       <div class="meeting-icon">
-                        <i class="bi bi-question-circle-fill" aria-hidden="true"></i>
+                        <svg class="icon" width="24" height="24" aria-hidden="true"><use href="#icon-question-circle-fill"/></svg>
                       </div>
                       <div class="meeting-text">
                         <span id="meeting-name">CTWR Weekly Hacknight</span>
@@ -291,7 +290,7 @@ permalink: /
                     
                     <div class="meeting-detail-item">
                       <div class="meeting-icon">
-                        <i class="bi bi-calendar-date-fill" aria-hidden="true"></i>
+                        <svg class="icon" width="24" height="24" aria-hidden="true"><use href="#icon-calendar-date-fill"/></svg>
                       </div>
                       <div class="meeting-text">
                         <span id="meeting-date-time">Thursday 6:00 PM</span>
@@ -300,7 +299,7 @@ permalink: /
                     
                     <div class="meeting-detail-item">
                       <div class="meeting-icon">
-                        <i class="bi bi-pin-fill" aria-hidden="true"></i>
+                        <svg class="icon" width="24" height="24" aria-hidden="true"><use href="#icon-pin-fill"/></svg>
                       </div>
                       <div class="meeting-text">
                         <span id="meeting-location">Downtown Kitchener</span>
