--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,6 @@ permalink: /projects.html
     {% else %}
     <link href="css/bootstrap.css" rel="stylesheet" />
     {% endif %}
-    <link href="css/bootstrap-icons.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/abstract-shapes.css" rel="stylesheet" />
     <link href="css/pages/projects.css" rel="stylesheet" />
@@ -140,25 +139,25 @@ permalink: /projects.html
                   <div class="meeting-details">
                     <div class="meeting-detail-item">
                       <div class="meeting-icon">
-                        <i class="bi bi-question-circle-fill" aria-hidden="true"></i>
+                        <svg class="icon" width="24" height="24" aria-hidden="true"><use href="#icon-question-circle-fill"/></svg>
                       </div>
                       <div class="meeting-text">
                         <span id="meeting-name">CTWR Weekly Hacknight</span>
                       </div>
                     </div>
-                    
+
                     <div class="meeting-detail-item">
                       <div class="meeting-icon">
-                        <i class="bi bi-calendar-date-fill" aria-hidden="true"></i>
+                        <svg class="icon" width="24" height="24" aria-hidden="true"><use href="#icon-calendar-date-fill"/></svg>
                       </div>
                       <div class="meeting-text">
                         <span id="meeting-date-time">Thursday 6:00 PM</span>
                       </div>
                     </div>
-                    
+
                     <div class="meeting-detail-item">
                       <div class="meeting-icon">
-                        <i class="bi bi-pin-fill" aria-hidden="true"></i>
+                        <svg class="icon" width="24" height="24" aria-hidden="true"><use href="#icon-pin-fill"/></svg>
                       </div>
                       <div class="meeting-text">
                         <span id="meeting-location">Downtown Kitchener</span>
