Fix pa11y a11y issues

--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@ permalink: /about.html
               <div class="col-lg-8 col-12 text-center">
                 <h2 class="mb-4">Stay Connected</h2>
                 <p class="mb-4">Subscribe to our newsletter and never miss updates on events, projects, and community news.</p>
-                <div id="mc_embed_signup" class="newsletter-signup-main">
+                <div id="mc_embed_signup_about" class="newsletter-signup-main">
                   <form action="https://civictechwr.us11.list-manage.com/subscribe/post?u=70e9ca4ba196596a75a7b6a3e&amp;id=e8b89282ec" method="post" id="mc-embedded-subscribe-form-about" name="mc-embedded-subscribe-form" class="validate" target="_blank">
                     <div class="newsletter-form-wrapper">
                       <input type="email" name="EMAIL" class="email newsletter-input-main" id="mce-EMAIL-about" placeholder="your@email.com" required="" aria-label="Email Address">
