--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ permalink: /
           <div class="row d-flex justify-content-center align-items-center">
             <div class="col-lg-4 col-12">
               <div class="hero-text">
-                <p>&lt;/&gt; Welcome to CTWR</p>
+                <p class="hero-kicker">&lt;/&gt; Welcome to CTWR</p>
                 <div class="hero-badge">
                   <h1 class="hero-title">CivicTech<br>Waterloo Region</h1>
                 </div>
@@ -260,7 +260,7 @@ permalink: /
               <div class="abstract-shape shape-star right-10p top-30p" aria-hidden="true"></div>
               <h2 class="mb-4">Stay in the Loop</h2>
               <p class="mb-4">Get updates on upcoming hacknights, new projects, and community news delivered to your inbox.</p>
-              <div id="mc_embed_signup" class="newsletter-signup-main">
+              <div id="mc_embed_signup_main" class="newsletter-signup-main">
                 <form action="https://civictechwr.us11.list-manage.com/subscribe/post?u=70e9ca4ba196596a75a7b6a3e&amp;id=e8b89282ec" method="post" id="mc-embedded-subscribe-form-main" name="mc-embedded-subscribe-form" class="validate" target="_blank">
                   <div class="newsletter-form-wrapper">
                     <input type="email" name="EMAIL" class="email newsletter-input-main" id="mce-EMAIL-main" placeholder="your@email.com" required="" aria-label="Email Address">
