--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ permalink: /
         </div>
         <div class="container">
           <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-lg-4 col-12">
+            <div class="col-lg-12 col-12">
               <div class="hero-text">
                 <p class="hero-kicker">&lt;/&gt; Welcome to CTWR</p>
                 <div class="hero-badge">
@@ -191,7 +191,7 @@ permalink: /
         <div class="abstract-shape shape-cross left-12p bottom-25p" aria-hidden="true"></div>
 
         <div class="container">
-          <div class="row align-items-start">
+          <div class="row align-items-end">
             
             <div class="col-lg-6 col-12 order-2 order-lg-1 mb-4 mb-lg-0">
               <div class="mb-3">
@@ -250,31 +250,9 @@ permalink: /
 
       <!-- NEXT MEETING -->
       {% include meeting-section.html section_id="section_next_meeting" %}
-
       <!-- NEWSLETTER SIGNUP -->
-      <section class="newsletter-cta section-padding shape-container" id="newsletter-section">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-8 col-12 text-center">
-              <div class="abstract-shape shape-circle left-10p top-20p" aria-hidden="true"></div>
-              <div class="abstract-shape shape-star right-10p top-30p" aria-hidden="true"></div>
-              <h2 class="mb-4">Stay in the Loop</h2>
-              <p class="mb-4">Get updates on upcoming hacknights, new projects, and community news delivered to your inbox.</p>
-              <div id="mc_embed_signup_main" class="newsletter-signup-main">
-                <form action="https://civictechwr.us11.list-manage.com/subscribe/post?u=70e9ca4ba196596a75a7b6a3e&amp;id=e8b89282ec" method="post" id="mc-embedded-subscribe-form-main" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-                  <div class="newsletter-form-wrapper">
-                    <input type="email" name="EMAIL" class="email newsletter-input-main" id="mce-EMAIL-main" placeholder="your@email.com" required="" aria-label="Email Address">
-                    <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                      <input type="text" name="b_70e9ca4ba196596a75a7b6a3e_e8b89282ec" tabindex="-1" value="">
-                    </div>
-                    <input type="submit" name="subscribe" id="mc-embedded-subscribe-main" class="btn btn--primary newsletter-btn-main" value="Subscribe">
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      {% include newsletter-signup.html %}
+      
     </main>
 
     <!-- SPONSORS -->
