Update featured and community project labels

--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@ permalink: /projects.html
           </div>
         </section>
 
-        <h2 class="projects-section-heading">Other Projects</h2>
+        <h2 class="projects-section-heading">More Community Projects</h2>
         <section class="projects-section shape-container">
           <div class="row" id="github-projects-container">
             <!-- GitHub projects will load here -->
@@ -260,7 +260,7 @@ permalink: /projects.html
             console.error('Error loading GitHub projects:', error);
             document.getElementById('github-projects-container').innerHTML = `
                     <div class="col-12 text-center">
-                        <p>Sorry, we couldn't load the other projects. Please try again later.</p>
+                        <p>Sorry, we couldn't load the community projects. Please try again later.</p>
                     </div>
                 `;
           });
